syntax="proto2"; 
package baikaldb.pb;
//option cc_enable_arenas = true;

// 1-11是store上的操作
enum OpType {
    OP_NONE                                 = 0;
    OP_INSERT                               = 1;
    OP_DELETE                               = 2;
    OP_UPDATE                               = 3;
    OP_SELECT                               = 4;
    OP_BEGIN                                = 5;
    OP_COMMIT                               = 6;
    OP_ROLLBACK                             = 7;
    OP_KILL                                 = 8;
    OP_START_SPLIT                          = 9; //走raft,创建迭代器，取出index
    OP_START_SPLIT_FOR_TAIL                 = 10; //分发数据完成之后，验证请求的有效性
    OP_VALIDATE_AND_ADD_VERSION             = 11; //分裂时version + 1
    OP_ADD_VERSION_FOR_SPLIT_REGION         = 12; //该接口是通过网络请求发送的， 上边三个都不是
    OP_TRUNCATE_TABLE                       = 13;
    OP_PREPARE_V2                           = 14; 
    OP_EXPLAIN                              = 15;
    OP_ADD_LOGICAL                          = 114; //建逻辑机房
    OP_ADD_PHYSICAL                         = 115; //建物理机房
    OP_ADD_INSTANCE                         = 116; //建实例, 实例通过上报心跳创建，此借口暂时无用
    OP_DROP_LOGICAL                         = 117; //删除逻辑机房
    OP_DROP_PHYSICAL                        = 118; //删除物理机房
    OP_DROP_INSTANCE                        = 119; //删除实例
    OP_UPDATE_INSTANCE                      = 120; //改实例的tag信息
    OP_MOVE_PHYSICAL                        = 121; //物理机房迁移，从一个逻辑机房迁到另外一个逻辑机房
    OP_CREATE_USER                          = 122; //建用户
    OP_ADD_PRIVILEGE                        = 123; //增加权限/bns/ip
    OP_DROP_USER                            = 124; //删除用户
    OP_DROP_PRIVILEGE                       = 125; //删除权限/bns/ip
    OP_CREATE_NAMESPACE                     = 126; //建namespace
    OP_CREATE_DATABASE                      = 127; //建库
    OP_CREATE_TABLE                         = 128; //建表
    OP_DROP_NAMESPACE                       = 129; //删除namespace
    OP_DROP_DATABASE                        = 130; //删除database
    OP_DROP_TABLE                           = 131; //删除表
    OP_RENAME_TABLE                         = 132; //重命名表名
    OP_ADD_FIELD                            = 133; //加列
    OP_ADD_INDEX                            = 134; //加索引
    OP_DROP_INDEX                           = 135; //删索引
    OP_DROP_FIELD                           = 136; //删索引
    OP_RENAME_FIELD                         = 137; //改字段名称
    OP_RENAME_INDEX                         = 138; //改索引名称
    OP_MODIFY_FIELD                         = 139; //改字段定义，包括改字段类型, 暂不支持
    OP_MODIFY_NAMESPACE                     = 140; //改namespace quota
    OP_MODIFY_DATABASE                      = 141; //改database quota
    OP_UPDATE_REGION                        = 142; //更新schema上的regionInfo
    OP_DROP_REGION                          = 143; //在一个实例上删除region
    OP_SPLIT_REGION                         = 144; //Region请求分裂, Store请求一个新的region_id和instance
    OP_UPDATE_BYTE_SIZE                     = 145; //修改表的byte_size_per_record
    OP_GEN_ID_FOR_AUTO_INCREMENT            = 146; //自增主键生成id
    OP_UPDATE_FOR_AUTO_INCREMENT            = 147; //更新自增主键最大值
    OP_RESTORE_REGION                       = 148; //恢复store误删的region
    OP_OPEN_UNSAFE_DECISION                 = 149; //开启删表和log_index=0时自动删除region逻辑10分钟
    OP_SET_INSTANCE_MIGRATE                 = 150; //手工置实例状态为MIGRATE，迁移用
    OP_PREPARE                              = 151; 
    OP_ADD_ID_FOR_AUTO_INCREMENT            = 152; //添加自增主键
    OP_DROP_ID_FOR_AUTO_INCREMENT           = 153; //删除自增主键
    OP_CLOSE_LOAD_BALANCE                   = 154;
    OP_OPEN_LOAD_BALANCE                    = 155;
    OP_CLOSE_UNSAFE_DECISION                = 156;
    OP_UPDATE_DISTS                         = 157; //修改表的机房分布
    OP_CLOSE_MIGRATE                        = 158; //迁移跟其他开关不同的是，默认情况下是开启的
    OP_OPEN_MIGRATE                         = 159;
    OP_UPDATE_SPLIT_LINES                   = 160; //修改表的region_split_lines, 调整分裂阈值
};
